--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
       # Build app for production
       - name: Build app bundle
         run: npm run build:prod
+      # Route file renaming
+      - name: Rename index for routing
+        run: mv dist/asistencia-legal/index.html dist/asistencia-legal/404.html 
       # Deploy to GitHub pages
       - name: Deploy to pages
         uses: crazy-max/ghaction-github-pages@v4.0.0
